# mp-fsm

./: .dockerignore  Dockerfile  README.md  compose.yaml  docker-compose.cache.json  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml  tests.yaml  tests.yml
mp_fsm/: statemachine.py
src/mp_fsm/: statemachine.py
tests/: test_statemachine.py
