[tool.poetry]
name = "mp-fsm"
version = "0.1.0"
description = ""
authors = ["Youri Westerman <y.westerman@amsterdam.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.12.1"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [
    "tests/*"

]

[tool.isort]
profile = "black"
overwrite_in_place = true

[tool.mypy]
strict = true
