[project]
name = "mp-fsm"
version = "0.1.0"
description = ""
authors = [
    {name = "Youri Westerman",email = "y.westerman@amsterdam.nl"},
]
readme = "README.md"
requires-python = "^3.13"

[tool.poetry.group.dev.dependencies]
anyio = "^4.10.0"
black = "^25.1.0"
isort = "^6.0.0"
mypy = "^1.17.1"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-mock = "^3.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [
    "tests/*"

]

[tool.isort]
profile = "black"
overwrite_in_place = true

[tool.mypy]
strict = true
