[project]
name = "mp-fsm"
version = "0.1.0"
description = ""
authors = [
    {name = "Youri Westerman",email = "y.westerman@amsterdam.nl"},
]
readme = "README.md"
requires-python = ">=3.13,<4.0"

[dependency-groups]
dev = [
    "anyio>=4.10.0",
    "black>=25.1.0",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "pytest>=8.4.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.14.1",
]

[build-system]
requires = ["uv_build>=0.8.19,<0.10.0"]
build-backend = "uv_build"

[tool.coverage.run]
omit = [
    "tests/*"

]

[tool.isort]
profile = "black"
overwrite_in_place = true

[tool.mypy]
strict = true
